--- a/package.json
+++ b/package.json
@@ -19,18 +19,15 @@
   "main": "./lib",
   "scripts": {
     "clean": "rimraf ./lib",
-    "dev": "babel ./src --out-dir ./lib --watch",
+    "dev": "babel -w ./src --out-dir ./lib",
+    "stylus": "stylus -c -w ./src/style.styl -o ./lib/style.css",
     "build": "babel ./src --out-dir ./lib"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "jss": "^3.11.1",
-    "jss-camel-case": "^1.1.0",
-    "jss-nested": "^1.0.3",
-    "jss-px": "^1.0.0",
-    "jss-vendor-prefixer": "^2.0.0",
-    "react": "^15.0.2",
-    "react-jss": "^2.1.0"
+    "classnames": "^2.2.5"
+  },
+  "peerDependencies": {
+    "react": "^15.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
@@ -40,8 +37,12 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "css-loader": "^0.23.1",
+    "react": "^15.2.0",
     "react-hot-loader": "^1.3.0",
     "rimraf": "^2.5.0",
+    "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
     "webpack": "^1.13.1"
   }
 }
