--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-notify-me",
-  "version": "0.4.3",
+  "name": "@eagle/react-notify-me",
+  "version": "0.4.4",
   "description": "React Notification",
   "author": {
     "name": "Pavel Ivanov",
