rename npm package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@eagle/react-notify-me",
+  "name": "react-notify-me",
   "version": "0.5.0",
   "description": "React Notification",
   "author": {
