--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "main": "./lib",
   "scripts": {
     "clean": "rimraf ./lib",
+    "npu": "npu -d",
     "dev": "babel -w ./src --out-dir ./lib",
     "stylus": "stylus -w ./src/style.styl -o ./lib/style.css",
     "build": "npm run clean && babel ./src --out-dir ./lib && stylus ./src/style.styl -o ./lib/style.css"
@@ -31,18 +32,15 @@
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
-    "babel-core": "^6.7.6",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "css-loader": "^0.23.1",
-    "react": "^15.2.0",
-    "react-hot-loader": "^1.3.0",
+    "file-loader": "^0.9.0",
+    "npu": "0.0.11",
+    "react-dom": "^15.2.1",
     "rimraf": "^2.5.0",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
-    "webpack": "^1.13.1"
+    "url-loader": "^0.5.7"
   }
 }
