--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-notify-me",
   "version": "0.5.3",
-  "description": "React Notification",
+  "description": "React's module that shows notifications",
   "author": {
     "name": "Pavel Ivanov",
     "email": "grammka@gmail.com"
@@ -13,6 +13,7 @@
   "keywords": [
     "react",
     "notify",
+    "notifier",
     "notification"
   ],
   "license": "MIT",
