--- a/package.json
+++ b/package.json
@@ -21,29 +21,22 @@
   "scripts": {
     "prepublish": "npm run build",
     "clean": "rimraf ./lib",
-    "npu": "npu -d",
-    "npu:build": "npu",
-    "dev": "babel -w ./src --out-dir ./lib",
-    "stylus": "stylus -w ./src/style.styl -o ./lib/style.css",
-    "build": "npm run clean && babel ./src --out-dir ./lib && stylus ./src/style.styl -o ./lib/style.css"
-  },
-  "dependencies": {
-    "classnames": "^2.2.5"
+    "dev": "babel -w ./src_NEW --out-dir ./lib",
+    "build": "npm run clean && babel ./src_NEW --out-dir ./lib && cp ./src/style.css ./lib/style.css"
   },
   "peerDependencies": {
-    "react": "^15.2.0"
+    "classnames": "^2.2.6",
+    "react": "^16.0.0",
+    "prop-types": "^15.6.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.3.13",
-    "css-loader": "^0.23.1",
-    "file-loader": "^0.9.0",
-    "npu": "0.0.14",
-    "react-dom": "^15.2.1",
-    "rimraf": "^2.5.0",
-    "style-loader": "^0.13.1",
-    "stylus": "^0.54.5",
-    "url-loader": "^0.5.7"
+    "@babel/cli": "^7.0.0-beta.54",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
+    "@babel/plugin-transform-classes": "^7.0.0-beta.54",
+    "@babel/plugin-transform-destructuring": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/preset-react": "^7.0.0-beta.54",
+    "rimraf": "^2.5.0"
   }
 }
